@@ -26,7 +26,8 @@
 #'   'curl -O https://cran.r-project.org/src/contrib/jsonlite_1.5.tar.gz',
 #'   'R CMD check jsonlite_1.5.tar.gz',
 #'   'rm -f jsonlite_1.5.tar.gz'
-#' ))}
+#' ))
+#' ssh_disconnect(session)}
 ssh_exec_wait <- function(session, command = "whoami", std_out = stdout(), std_err = stderr()) {
   assert_session(session)
   stopifnot(is.character(command))
